[package]
name = "ytunnel"
version = "0.1.0"
edition = "2021"
description = "Simple CLI for Cloudflare Tunnels with custom domains"
authors = ["YetiDevWorks"]

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full", "process"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "6"
anyhow = "1"
rand = "0.9"
