[package]
name = "ytunnel"
version = "0.1.0"
edition = "2021"
description = "TUI-first CLI for managing Cloudflare Tunnels with custom domains"
authors = ["YetiDevWorks"]
license = "MIT"
repository = "https://github.com/yetidevworks/ytunnel"
homepage = "https://github.com/yetidevworks/ytunnel"
readme = "README.md"
keywords = ["cloudflare", "tunnel", "tui", "cli", "ngrok"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full", "process"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "6"
anyhow = "1"
rand = "0.9"
ratatui = "0.29"
crossterm = "0.28"
